Added resources and improved rollup

--- a/test.html
+++ b/test.html
@@ -14,6 +14,6 @@
 
 <body>
   <div id="donut-div" style="width: 600px"></div>
-  <script src="./build/js/bundle.js"></script>
+  <script src="./build/js/doughnutjs.umd.js"></script>
 </body>
 </html>
