--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
   <script type="module">
     import { doughnut } from "./src/main.js"
     const chart = await doughnut({selector:'#donut-div'})
-    chart.loadYaml('./data/test1.yaml')
+    chart.loadRecipe('./data/test1.yaml')
     window.nextChart = function() {
       chart.displayNextChart()
     }
