Added test of roughjs in module roughUp

--- a/test.html
+++ b/test.html
@@ -39,6 +39,13 @@
     }
   </script>
 
+  <!-- <script type="module">
+    import roughjs from 'https://cdn.skypack.dev/roughjs'
+  </script> -->
+  
+
+
+
   <!-- <script type="importmap">
     {
       "imports": {
