--- a/test.html
+++ b/test.html
@@ -10,6 +10,13 @@
 
   <!-- <link rel="stylesheet" href="./styles.css?v=1.0"> -->
 
+  <link rel="stylesheet" href="./css/doughnut.css">
+  <style>
+    /* body {
+      font-family: Arial, Helvetica, sans-serif;
+    } */
+  </style>
+
 </head>
 
 <body>
