--- a/test.html
+++ b/test.html
@@ -66,7 +66,7 @@
     import { doughnut } from "./src/main.js"
     const chart = await doughnut({selector:'#donut-div'})
 
-    chart.fixGlobals({transition: 'no'})
+    //chart.fixGlobals({transition: 'no'})
 
     chart.loadRecipe('./data/test1.yaml')
     chart.fixGlobals({width_px: 600, height_px: 600})
