Moved converters from recipe defaults into new section Changed took angle_origin out of element type d3 processing files and put into data's resolveNumericFormats

--- a/test.html
+++ b/test.html
@@ -68,7 +68,7 @@
 
     //chart.fixGlobals({transition: 'no'})
 
-    chart.loadRecipe('./data/test1.yaml')
+    //chart.loadRecipe('./data/test1.yaml')
     chart.fixGlobals({width_px: 600, height_px: 600})
 
     window.nextChart = function() {
