--- a/embedded/interactive.html
+++ b/embedded/interactive.html
@@ -2,10 +2,64 @@
 <head>
   <meta charset="utf-8">
   <title>R&D page for Embedded Economy SVG</title>
-  <link rel="stylesheet" href="./embedded-economy.css">
+  <!-- <link rel="stylesheet" href="./embedded-economy.css"> -->
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    .highlight-fill {
+      animation-name: blinkBackground;
+      animation-duration: 0.5s;
+      animation-iteration-count: infinite;
+    }
+    @keyframes blinkBackground {
+      25% {
+        fill: yellow;
+      }
+      50% {
+        fill: white;
+      }
+      75% {
+        fill: yellow;
+      }
+    }
+    .highlight-line {
+      animation-name: blinkLine;
+      animation-duration: 0.5s;
+      animation-iteration-count: infinite;
+    }
+    @keyframes blinkLine {
+      25% {
+        stroke: magenta;
+      }
+      50% {
+        stroke: white;
+      }
+      75% {
+        stroke: magenta;
+      }
+    }
+    .highlight-text {
+      animation-name: blinkText;
+      animation-duration: 0.5s;
+      animation-iteration-count: infinite;
+    }
+    @keyframes blinkText {
+      25% {
+        fill: magenta;
+      }
+      50% {
+        fill: white;
+      }
+      75% {
+        fill: magenta;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div id="divSvg" style="width: 100%">
+  <!-- <img src="./embedded-economy.svg" style="width: 100%; border: solid black; background-color: lightgray;" /> -->
+  <div id="divSvg" style="width: 100%; border: solid black; background-color: white;" >
     <!-- <object id="rtmp1" data="./embedded-economy.svg" type="image/svg+xml" width="100%"></object>    -->
   </div>
   <div>
@@ -13,13 +67,33 @@
       Click on the on the element you wish to alter. The <i>id</i> attribute of any element element
       under the point where you clicked will appear below. To idetify the element from the id, just
       click on the id - the element will be highlighted. 
-    
     </p>
-    <div id="elements-under-mouse">
 
-    </div>
-    <div>
-      Colour: <input type="text" style="width: 120px"  id="selColour">
+    <div style="display: flex; flex-wrap: wrap;">
+      <div id="elements-under-mouse" style="flex: 1; padding-right: 1em"></div>
+      <div style="flex: 1">
+        <div id="element-id-or-class" style="font-size: 1em; font-weight: bold; margin-bottom: 0.5em;"></div>
+
+        <div style>
+          Set colour interactively
+        </div>
+        <div style>
+          <input type="text" style="width: 120px"  id="selColour">
+        </div>
+
+        <div style="margin-top: 0.5em">
+          Set colour manually
+        </div>
+        <div>
+          <input id="manual-colour" style="width: 120" type="text"></input><button onclick="setColourManual()">Set</button>
+        </div>
+        <div id="colour-error"></div>
+
+        <div id="colour-hidden" style="display:none"></div>
+        <div style="margin-top: 1em">
+          <button onclick="loadSvg()">Clear all</button>
+        </div>
+      </div>
     </div>
     
   </div>
@@ -28,44 +102,139 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.5.2/jscolor.min.js"></script>
 
 <script>
-  let highlightedId
+  let selectedId
+  let selectedSelector
+  loadSvg()
+  const selColour = new JSColor('#selColour', {onInput: colourChanged})
 
-  d3.text('./embedded-economy.svg').then(text => {
-    // Dynamically load SVG
-    d3.select('#divSvg').html(text)
-    const svg = document.querySelector('svg')
-    svg.addEventListener('click',function(evt){
-      const pt = svg.createSVGPoint()
-      pt.x = evt.clientX; pt.y = evt.clientY
-      getElementsUnderPoint(pt.x, pt.y)
-    },false)
-  })
+  function loadSvg() {
+    d3.text('./embedded-economy.svg').then(text => {
+      // Dynamically load SVG
+      d3.select('#divSvg').html(text)
+      const svg = document.querySelector('svg')
+      svg.addEventListener('click',function(evt){
+        const pt = svg.createSVGPoint()
+        pt.x = evt.clientX; pt.y = evt.clientY
+        getElementsUnderPoint(pt.x, pt.y)
+      },false)
+    })
+  }
 
   const getElementsUnderPoint = function(x, y) {
-
+    let highlightedId
+    let selector
     d3.select('#elements-under-mouse').html('')
-
     const ids = elementsFromPoint(x, y, 3)
     ids.forEach( function( id ){
       const b = d3.select('#elements-under-mouse').append('button')
+      b.style('width', '100%')
+      b.style('margin-bottom', '0.5em')
+      b.style('min-width', '250px')
       b.text(id)
-      b.on('click', function(){
-        if (highlightedId) {
-          d3.select(`#${highlightedId}`).style('fill', null).style('stroke', null)
-        }
-       // d3.select('svg').selectAll('*').style('opacity', 0.2)
-        d3.select(`#${highlightedId}`).style('opacity', 0.5)
+      b.on('mouseover', function(){
         highlightedId = b.text()
-        // if (highlightedId.endsWith('background')) {
-        //   d3.select(`#${highlightedId}`).style('fill', 'yellow').style('stroke', 'none')
-        // } else if (highlightedId.endsWith('text') || highlightedId.endsWith('path')) {
-        //   d3.select(`#${highlightedId}`).style('fill', 'magenta').style('stroke', 'none')
-        // } else {
-        //   d3.select(`#${highlightedId}`).style('fill', 'none').style('stroke', 'magenta')
-        // }
+        if (highlightedId.startsWith('dnjs-class')) {
+          selector = `.${highlightedId}`
+        } else {
+          selector = `#${highlightedId}`
+        }
+        // Do the highlighting
+        if (highlightedId.endsWith('background')) {
+          d3.selectAll(selector).classed('highlight-fill', true)
+        } else if (highlightedId.endsWith('text') || highlightedId.endsWith('path')) {
+          d3.selectAll(selector).classed('highlight-text', true)
+        } else {
+          d3.selectAll(selector).classed('highlight-line', true)
+        }
       })
-      d3.select('#elements-under-mouse').append('br')
+      b.on('mouseout', function(){
+        if (highlightedId) {
+          d3.selectAll(selector).classed('highlight-fill', false)
+          d3.selectAll(selector).classed('highlight-line', false)
+          d3.selectAll(selector).classed('highlight-text', false)
+        }
+      })
+      b.on('click', function() {
+        d3.selectAll(selector).classed('highlight-fill', false)
+        d3.selectAll(selector).classed('highlight-line', false)
+        d3.selectAll(selector).classed('highlight-text', false)
+
+        d3.select('#element-id-or-class').text(b.text())
+
+        let style
+        if (highlightedId.endsWith('background') || highlightedId.endsWith('text') || highlightedId.endsWith('path')) {
+          style = 'fill'
+        } else {
+          style = 'stroke'
+        }
+        selectedId = highlightedId
+        selectedSelector = selector
+
+        setPickerColour(getCurrentColour())
+      })
     })
+  }
+
+  function setPickerColour(colour) {
+
+    const matchColors = /rgb\((\d{1,3}), (\d{1,3}), (\d{1,3})\)/
+    const match = matchColors.exec(colour)
+    if (match) {
+      selColour.fromRGBA(match[1], match[2], match[3], 1)
+    }
+  }
+
+  function getCurrentColour() {
+    let style
+    if (selectedId.endsWith('background') || selectedId.endsWith('text') || selectedId.endsWith('path')) {
+      style = 'fill'
+    } else {
+      style = 'stroke'
+    }
+    const currentColour = d3.select(selectedSelector).style(style)
+    return currentColour
+  }
+
+  function colourChanged() {
+    changeColour(selColour.toHEXString())
+  }
+
+  function setColourManual() {
+    const colour = d3.select("#manual-colour").property("value")
+    d3.select('#colour-hidden').style('color', 'rgb(1,1,1)')
+    d3.select('#colour-hidden').style('color', colour)
+    const cs = getComputedStyle(d3.select('#colour-hidden').node())
+    const computedColour = cs.getPropertyValue("color")
+    const matchColors = /rgb\((\d{1,3}), (\d{1,3}), (\d{1,3})\)/
+    const match = matchColors.exec(computedColour)
+    if (match[1] === '1' || match[2] === '1' ||  match[3] === '1') {
+      d3.select('#colour-error').text('Colour is invalid. Should be either...')
+    } else {
+      setPickerColour(computedColour)
+      changeColour(computedColour)
+    }
+  }
+
+  function changeColour(colour) {
+    let style
+    if (selectedId.endsWith('background') || selectedId.endsWith('text') || selectedId.endsWith('path')) {
+      style = 'fill'
+    } else {
+      style = 'stroke'
+    }
+    if (selectedId) {
+      d3.selectAll(selectedSelector).style(style, colour)
+
+      if (selectedId === 'dnjs-class-household-quarter-background' || selectedId === 'dnjs-class-economy-quarter-background'){
+        d3.select('#dnjs-economy-text-background').attr('flood-color', colour)
+      }
+      if (selectedId === 'dnjs-society2economy-background'){
+        d3.select('#dnjs-society-text-background').attr('flood-color', colour)
+      }
+      if (selectedId === 'dnjs-earth2society-background'){
+        d3.select('#dnjs-earth-text-background').attr('flood-color', colour)
+      }
+    }
   }
   
   function elementsFromPoint(x, y, d) {
@@ -73,20 +242,29 @@
     for(let i=x-d; i <= x+d; i++) {
       for(let j=y-d; j <= y+d; j++) {
         els = document.elementsFromPoint( i, j )
-          .filter(e => e.id > "" && e.id != "divSvg")
+          .filter(e => e.id != "divSvg")
           .forEach(e => {
-            if (!all.find(id => id === e.id)) {
-              all.push(e.id)
+            let identifiers = []
+            if (e.className.baseVal) {
+              const classes = e.className.baseVal.split(" ")
+              classes.forEach(c => {
+                if (c.startsWith('dnjs-class')) {
+                  identifiers.push(c)
+                }
+              })
             }
+            if (identifiers.length === 0 && e.id) {
+              identifiers.push(e.id)
+            }
+            identifiers.forEach(i => {
+              if (!all.find(id => id === i)) {
+                all.push(i)
+              }
+            })
           })
       }
     }
     return all
-  }
-
-  const selColour = new JSColor('#selColour', {onFineChange: colourChanged})
-  function colourChanged() {
-    console.log('get colour', selColour.toHEXString())
   }
 </script>
 </html>
