--- a/embedded/interactive.html
+++ b/embedded/interactive.html
@@ -76,42 +76,47 @@
       <div id="elements-under-mouse" style="flex: 1; padding-right: 1em"></div>
       <div style="flex: 1">
         <div id="selected-element" style="font-size: 1em; font-weight: bold; margin-bottom: 0.5em;"></div>
-
-        <div style>
-          Set colour interactively
-        </div>
-        <div style>
-          <input type="text" style="width: 120px"  id="selColour">
-        </div>
-
-        <div style="margin-top: 0.5em">
-          Set colour manually
-        </div>
-        <div>
-          <input id="manual-colour" style="width: 120" type="text"></input><button onclick="setColourManual()">Set</button>
-        </div>
-        <div id="colour-error"></div>
-
-        <div id="colour-hidden" style="display:none"></div>
-        <div style="margin-top: 1em">
-          <button onclick="setTransparent()">Set to transparent</button>
+        <div id="el-controls">
+          <div>
+            Set colour interactively
+          </div>
+          <div>
+            <input type="text" style="width: 120px"  id="selColour">
+          </div>
+          <div style="margin-top: 0.5em">
+            Set colour manually
+          </div>
+          <div>
+            <input id="manual-colour" style="width: 120" type="text"></input><button onclick="setColourManual()">Set</button>
+          </div>
+          <div id="colour-error"></div>
+          <div id="colour-hidden" style="display:none"></div>
+          <button style="margin-top: 1em; display: block" onclick="setTransparent()">Set to transparent</button>
+          <button style="margin-top: 1em; display: block" onclick="loadSvg()">Clear all</button>
         </div>
         <div style="margin-top: 1em">
-          <button onclick="loadSvg()">Clear all</button>
+          <button onclick="saveChartImage(d3.select('svg'), true, 'embedded-economy-custom')">Download as SVG</button>
+          <button onclick="saveChartImage(d3.select('svg'), false, 'embedded-economy-custom')">Download as PNG</button>
         </div>
       </div>
     </div>
-    
   </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.5.2/jscolor.min.js"></script>
-
 <script>
-  let selectedId
+  let selectedClass
   let selectedSelector
   loadSvg()
   const selColour = new JSColor('#selColour', {onInput: colourChanged})
+  d3.selectAll('#el-controls input').attr("disabled", true)
+  d3.selectAll('#el-controls button').attr("disabled", true)
+
+  d3.select('#dnjs-ff-financial-path').attr('transform', 'rotate(45)')
+  d3.select('#dnjs-ff-financial').attr('transform', 'rotate(45)')
+  d3.select('.dnjs-financial-flows-textpath').attr('transform', 'rotate(45)')
+  
+  
 
   function loadSvg() {
     d3.text('./embedded-economy.svg').then(text => {
@@ -127,8 +132,13 @@
   }
 
   const getElementsUnderPoint = function(x, y) {
-    let highlightedId
+    let highlightedClass
     let selector
+
+    d3.select('#selected-element').text("")
+    d3.selectAll('#el-controls input').attr("disabled", true)
+    d3.selectAll('#el-controls button').attr("disabled", true)
+
     d3.select('#elements-under-mouse').html('')
     const ids = elementsFromPoint(x, y, 3)
     ids.forEach( function( id ){
@@ -138,23 +148,19 @@
       b.style('min-width', '250px')
       b.text(id)
       b.on('mouseover', function(){
-        highlightedId = b.text()
-        //if (highlightedId.startsWith('dnjs-class')) {
-          selector = `.${highlightedId}`
-        // } else {
-        //   selector = `#${highlightedId}`
-        //}
+        highlightedClass = b.text()
+        selector = `.${highlightedClass}`
         // Do the highlighting
-        if (highlightedId.endsWith('background')) {
+        if (highlightedClass.endsWith('background')) {
           d3.selectAll(selector).classed('highlight-fill', true)
-        } else if (highlightedId.endsWith('text') || highlightedId.endsWith('path')) {
+        } else if (highlightedClass.endsWith('text') || highlightedClass.endsWith('path')) {
           d3.selectAll(selector).classed('highlight-text', true)
         } else {
           d3.selectAll(selector).classed('highlight-line', true)
         }
       })
       b.on('mouseout', function(){
-        if (highlightedId) {
+        if (highlightedClass) {
           d3.selectAll(selector).classed('highlight-fill', false)
           d3.selectAll(selector).classed('highlight-line', false)
           d3.selectAll(selector).classed('highlight-text', false)
@@ -165,15 +171,17 @@
         d3.selectAll(selector).classed('highlight-line', false)
         d3.selectAll(selector).classed('highlight-text', false)
 
+        d3.selectAll('#el-controls input').attr("disabled", null)
+        d3.selectAll('#el-controls button').attr("disabled", null)
         d3.select('#selected-element').text(`Colour: ${b.text()}`)
 
         let style
-        if (highlightedId.endsWith('background') || highlightedId.endsWith('text') || highlightedId.endsWith('path')) {
+        if (highlightedClass.endsWith('background') || highlightedClass.endsWith('text') || highlightedClass.endsWith('path')) {
           style = 'fill'
         } else {
           style = 'stroke'
         }
-        selectedId = highlightedId
+        selectedClass = highlightedClass
         selectedSelector = selector
 
         setPickerColour(getCurrentColour())
@@ -182,7 +190,6 @@
   }
 
   function setPickerColour(colour) {
-
     const matchColors = /rgb\((\d{1,3}), (\d{1,3}), (\d{1,3})\)/
     const match = matchColors.exec(colour)
     if (match) {
@@ -192,7 +199,7 @@
 
   function getCurrentColour() {
     let style
-    if (selectedId.endsWith('background') || selectedId.endsWith('text') || selectedId.endsWith('path')) {
+    if (selectedClass.endsWith('background') || selectedClass.endsWith('text') || selectedClass.endsWith('path')) {
       style = 'fill'
     } else {
       style = 'stroke'
@@ -223,60 +230,146 @@
 
   function changeColour(colour) {
     let style
-    if (selectedId === 'dnjs-class-svg-background') {
+    if (selectedClass === 'dnjs-svg-background') {
       style= 'background-color'
-    } else if (selectedId.endsWith('background') || selectedId.endsWith('text') || selectedId.endsWith('path')) {
+    } else if (selectedClass.endsWith('background') || selectedClass.endsWith('text') || selectedClass.endsWith('path')) {
       style = 'fill'
     } else {
       style = 'stroke'
     }
-    if (selectedId) {
+    if (selectedClass) {
       d3.selectAll(selectedSelector).style(style, colour)
 
-      if (selectedId === 'dnjs-class-household-quarter-background' || selectedId === 'dnjs-class-economy-quarter-background'){
+      if (selectedClass === 'dnjs-household-quarter-background' || selectedClass === 'dnjs-economy-quarter-background'){
         d3.select('#dnjs-economy-text-background').attr('flood-color', colour)
       }
-      if (selectedId === 'dnjs-class-society2economy-background'){
+      if (selectedClass === 'dnjs-society2economy-background'){
         d3.select('#dnjs-society-text-background').attr('flood-color', colour)
       }
-      if (selectedId === 'dnjs-class-earth2society-background'){
+      if (selectedClass === 'dnjs-earth2society-background'){
         d3.select('#dnjs-earth-text-background').attr('flood-color', colour)
       }
     }
   }
   
   function elementsFromPoint(x, y, d) {
-    let all = []
+    let allClasses = []
     for(let i=x-d; i <= x+d; i++) {
       for(let j=y-d; j <= y+d; j++) {
         els = document.elementsFromPoint( i, j )
-          // .filter(e => e.id != "divSvg")
           .forEach(e => {
-            let identifiers = []
+            let ptClasses = []
             if (e.className.baseVal) {
-              const classes = e.className.baseVal.split(" ")
-              classes.forEach(c => {
-                if (c.startsWith('dnjs-class')) {
-                  identifiers.push(c)
+              const elClasses = e.className.baseVal.split(" ")
+              elClasses.forEach(c => {
+                if (c.startsWith('dnjs')) {
+                  ptClasses.push(c)
                 }
               })
             }
-            // if (identifiers.length === 0 && e.id) {
-            //   identifiers.push(e.id)
-            // }
-            identifiers.forEach(i => {
-              if (!all.find(id => id === i)) {
-                all.push(i)
+            ptClasses.forEach(i => {
+              if (!allClasses.find(id => id === i)) {
+                allClasses.push(i)
               }
             })
           })
       }
     }
-    return all
+    return allClasses
   }
 
   function setTransparent() {
     changeColour('transparent')
   }
+
+  function saveChartImage(svg, asSvg, filename) {
+
+    return new Promise((resolve) => {
+      if (asSvg) {
+        const blob1 =  serialize(svg)
+        if(filename) {
+          download(blob1, filename)
+        }
+        resolve(blob1)
+      } else {
+        rasterize(svg).then(blob2 => {
+          if(filename) {
+            download(blob2, filename)
+          }
+          resolve(blob2)
+        })
+      }
+    })
+
+    function download(data, filename) {
+      const dataUrl = URL.createObjectURL(data)
+      const file = asSvg ? `${filename}.svg` : `${filename}.png`
+      downloadLink(dataUrl, file)
+    }
+
+    function serialize(svg) {
+      const xmlns = "http://www.w3.org/2000/xmlns/"
+      const xlinkns = "http://www.w3.org/1999/xlink"
+      const svgns = "http://www.w3.org/2000/svg"
+
+      const domSvg = svg.node()
+      const cloneSvg = domSvg.cloneNode(true)
+      const d3Clone = d3.select(cloneSvg)
+      // Explicitly change text in clone to required font
+      const fontOut = 'Poppins, sans-serif'
+      d3Clone.selectAll('text').style(fontOut)
+
+      cloneSvg.setAttributeNS(xmlns, "xmlns", svgns)
+      cloneSvg.setAttributeNS(xmlns, "xmlns:xlink", xlinkns)
+      const serializer = new window.XMLSerializer
+      const string = serializer.serializeToString(cloneSvg)
+      return new Blob([string], {type: "image/svg+xml"})
+    }
+
+    function rasterize(svg) {
+      let resolve, reject
+      const domSvg = svg.node()
+      const promise = new Promise((y, n) => (resolve = y, reject = n))
+      const image = new Image
+      image.onerror = reject
+      image.onload = () => {
+        const rect = domSvg.getBoundingClientRect()
+        // Create a canvas element
+        let canvas = document.createElement('canvas')
+        canvas.width = rect.width
+        canvas.height = rect.height
+        let context = canvas.getContext('2d')
+        context.drawImage(image, 0, 0, rect.width, rect.height)
+        context.canvas.toBlob(resolve)
+      }
+      image.src = URL.createObjectURL(serialize(svg))
+      return promise
+    }
+
+    function downloadLink(dataUrl, file) {
+
+      // Create a link element
+      const link = document.createElement("a")
+      // Set link's href to point to the data URL
+      link.href = dataUrl
+      link.download = file
+
+      // Append link to the body
+      document.body.appendChild(link)
+
+      // Dispatch click event on the link
+      // This is necessary as link.click() does not work on the latest firefox
+      link.dispatchEvent(
+        new MouseEvent('click', {
+          bubbles: true,
+          cancelable: true,
+          view: window
+        })
+      )
+      // Remove link from body
+      document.body.removeChild(link)
+    }
+  }
+
 </script>
 </html>
