Started restructuring of recipe from YAML to CSV

--- a/doughnut/test.html
+++ b/doughnut/test.html
@@ -73,6 +73,7 @@
     window.loadRockstrom = function () {
       chart.overrideGlobals({width_px: null, height_px: null})
       chart.loadRecipe(`./data/rockstrom2009.yaml`)
+      chart.loadRecipeCsv(`./data/boundaries-evolution.csv`)
     }
   </script>
 </body>
