--- a/doughnut/test.html
+++ b/doughnut/test.html
@@ -72,7 +72,7 @@
 
     window.loadRockstrom = function () {
       chart.overrideGlobals({width_px: null, height_px: null})
-      chart.loadRecipe(`./data/rockstrom2009.yaml`)
+      // chart.loadRecipe(`./data/rockstrom2009.yaml`)
       chart.loadRecipeCsv(`./data/boundaries-evolution.csv`)
     }
   </script>
