Refactored handling of globals, defs and defaults

--- a/doughnut/test.html
+++ b/doughnut/test.html
@@ -71,9 +71,8 @@
     }
 
     window.loadRockstrom = function () {
-      chart.overrideGlobals({width_px: null, height_px: null})
-      // chart.loadRecipe(`./data/rockstrom2009.yaml`)
-      chart.loadRecipeCsv(`./data/boundaries-evolution.csv`)
+      //chart.overrideGlobals({width_px: null, height_px: null})
+      chart.loadRecipe(`./data/boundaries-evolution.csv`)
     }
   </script>
 </body>
