Added duration metric and automatic chaining of trainsitions

--- a/doughnut/test.html
+++ b/doughnut/test.html
@@ -32,11 +32,6 @@
   <button type="button" onclick="loadRecipe(3)">Recipe 3</button> 
   <button type="button" onclick="loadRockstrom()">Rockstrom</button>
 
-  <br><br>
-
-  <button type="button" onclick="demo(true)">Forward</button>
-  <button type="button" onclick="demo(false)">Backward</button>
-
   <div id="donut-div" style="width: 100%"></div>
   <!-- <script src="./build/js/doughnutjs.umd.js"></script> -->
   
@@ -60,63 +55,6 @@
     const chart = await doughnut({selector:'#donut-div'})
     let ichart = 0
 
-    window.demo = async function(forward) {
-
-      switch(ichart) {
-        case 0:
-          if (forward) {
-            await chart.displayChart(1)
-            ichart=1
-          }
-          break
-        case 1:
-          if (forward) {
-            await chart.displayChart(2)
-            await chart.displayChart(3)
-            ichart=3
-          }
-          break
-        case 3:
-          if (forward) {
-            await chart.displayChart(4)
-            await chart.displayChart(5)
-            ichart=5
-          } else {
-            await chart.displayChart(2)
-            await chart.displayChart(1)
-            ichart=1
-          }
-          break
-        case 5:
-          if (forward) {
-            await chart.displayChart(6)
-            ichart=6
-          } else {
-            await chart.displayChart(4)
-            await chart.displayChart(3)
-            ichart=3
-          }
-          break
-        case 6:
-          if (forward) {
-            await chart.displayChart(7)
-            ichart=7
-          } else {
-            await chart.displayChart(5)
-            ichart=5
-          }
-          break
-        case 7:
-          if (!forward) {
-            await chart.displayChart(6)
-            ichart=6
-          }
-          break
-        default:
-          // Do nothing
-      }
-    }
-
     window.nextChart = function() {
       (async () => {
         await chart.displayNextChart()
@@ -124,7 +62,10 @@
       })()
     }
     window.previousChart = function() {
-      chart.displayPreviousChart()
+      (async () => {
+        await chart.displayPreviousChart()
+        console.log('promise ended')
+      })()
     }
     window.displayChart = function() {
       chart.displayChart(document.getElementById("chartno").value)
