Fix to reverseText

--- a/doughnut/test.html
+++ b/doughnut/test.html
@@ -27,6 +27,7 @@
   <br><br>
   <button type="button" onclick="loadRecipe('./data/doughnut1.csv')">Doughnut</button>
   <button type="button" onclick="loadRecipe('./data/boundaries-evolution.csv')">Rockstrom</button>
+  <button type="button" onclick="loadRecipe('./data/leeds.csv')">Leeds</button>
 
   <div id="donut-div" style="width: 100%"></div>
   <!-- <script src="./build/js/doughnutjs.umd.js"></script> -->
